test/tests/compiler/6_statements_and_conditional_expressions/valid/plx1_if_after_else.plx
pub fn main(none) i32 {
    x: i32 = 1
    if x > 0 { x = 0 
    }
    else { 
        return 1 }
    if x > 0 { x = 2 }
    return x
}
