test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/plx1_elif_no_line_break.plx
pub fn main(none) i32 {
    if 0 {
        return 1   
    } 
    elif 0 {
        return 2
    } else {
        return 0
    }
}
